--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>FIFA by bjazdzyk</title>
+		<style>
+body{
+	margin:  0px;
+	overflow:  hidden;
+}
+		</style>
 	</head>
 	<body>
+		<script src="js/three.js"></script>
 		<script type="text/javascript" src="index.js"></script>
 	</body>
 </html>
